--- a/src/Footer.css
+++ b/src/Footer.css
@@ -149,6 +149,7 @@ body{
       align-items: center;
       justify-content: center;
       transform: translateX(16vw);
+      color: black;
     }
     
   
