--- a/src/Audio.css
+++ b/src/Audio.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 body{
    
-    overflow: hidden;
+    overflow-y:visible;
     font-family: "Montserrat", sans-serif;
-    margin: 0; height: 80%; overflow: hidden
+    margin: 0; height: 80%; 
+    
     
 }
   
@@ -28,6 +29,26 @@ body{
     
   
 }
+.savebtn{
+      height: fit-content;
+    transform: translate(-25vw,5vw);
+
+background-color: #66BFBF;
+
+box-shadow: 0 2px rgb(158, 233, 213);
+font-family: "Montserrat", sans-serif;
+
+border: none;
+color: white;
+padding: 20px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: larger;
+margin: 4px 2px;
+cursor: pointer;
+place-items: center;
+    }
 
 .stoprec{
     width: 30px; 
@@ -87,11 +108,12 @@ audio{
        
     /* margin: 0 auto;
     display:block; */
-    transform: translate(30vw,4vw);
+    transform: translate(30vw,8vw);
     background: transparent;
    
+}a{
+    color: white;
 }
-
 
 button:hover {
 background-color: #66BFBF;
@@ -169,12 +191,14 @@ input[type=text], select,input[placeholder] {
 }
 .full{
 
-  position: fixed;
+
   top: 10;
   left: 0;
-  width: 100%;
+
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y:scroll;
+  width: 100%;
+  height: 60vw;
 
 
 
@@ -271,7 +295,46 @@ animation: fadein 0.5s, fadeout 0.5s 2.5s;
 @media screen and (max-width: 600px) {
 
     .mic{
-        transform: translate(0vw,3vw);
+        transform: translate(0vw,7vw);
+    }
+    .startrec{
+        transform: translate(29.5vw,22.5vw);
+
+    }
+    .stoprec{
+        transform: translate(41.4vw,22.5vw);
+
+    }
+    .upload{
+        transform: translate(63vw,11.5vw);
+
+    }
+
+.stream{
+      
+    margin: 0 auto;
+  
+    transform: translate(-5vw,0vw);
+ }
+   
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+
+ .full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 100vw;
+}
+}
+@media screen and (max-width: 420px) {
+
+    .mic{
+        transform: translate(0vw,7vw);
     }
     .startrec{
         transform: translate(29.5vw,29.5vw);
@@ -293,9 +356,218 @@ animation: fadein 0.5s, fadeout 0.5s 2.5s;
     transform: translate(-5vw,0vw);
  }
    
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+.full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 200vw;
+}
 
+}
+
+@media (mix-width: 350px) and (max-width: 600px){
+
+    .mic{
+        transform: translate(0vw,7vw);
+    }
+    .startrec{
+        transform: translate(29.5vw,3.5vw);
+
+    }
+    .stoprec{
+        transform: translate(41.4vw,29.5vw);
+
+    }
+    .upload{
+        transform: translate(63vw,15.5vw);
+
+    }
+
+.stream{
+      
+    margin: 0 auto;
+  
+    transform: translate(-5vw,0vw);
+ }
+   
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+.full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 220vw;
+}
 
 }
 
 
+@media screen and (max-width: 480px) {
 
+    .mic{
+        transform: translate(0vw,7vw);
+    }
+    .startrec{
+        transform: translate(29.5vw,31.5vw);
+
+    }
+    .stoprec{
+        transform: translate(41.4vw,31.5vw);
+
+    }
+    .upload{
+        transform: translate(63vw,15.5vw);
+
+    }
+
+.stream{
+      
+    margin: 0 auto;
+  
+    transform: translate(-5vw,0vw);
+ }
+   
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+.full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 225vw;
+}
+
+}
+
+@media screen and (max-width: 349px) {
+
+    .mic{
+        transform: translate(0vw,7vw);
+    }
+    .startrec{
+        transform: translate(29.5vw,31.5vw);
+
+    }
+    .stoprec{
+        transform: translate(41.4vw,31.5vw);
+
+    }
+    .upload{
+        transform: translate(60vw,15.5vw);
+
+    }
+
+.stream{
+      
+    margin: 0 auto;
+    width: 82%;
+    transform: translate(-5vw,0vw);
+ }
+   
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+.full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 255vw;
+}
+
+}
+@media screen and (max-width: 300px) {
+
+    .mic{
+        transform: translate(0vw,7vw);
+    }
+    .startrec{
+        transform: translate(29.5vw,28.5vw);
+
+    }
+    .stoprec{
+        transform: translate(41.4vw,28.5vw);
+
+    }
+    .upload{
+        transform: translate(56vw,5.5vw);
+
+    }
+
+.stream{
+      
+    margin: 0 auto;
+    width: 80%;
+    transform: translate(-5vw,-12vw);
+ }
+   
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+.full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 270vw;
+}
+
+}
+
+
+@media screen and (max-width: 279px) {
+
+    .mic{
+        transform: translate(0vw,7vw);
+    }
+    .startrec{
+        transform: translate(29.5vw,32.5vw);
+
+    }
+    .stoprec{
+        transform: translate(41.4vw,32.5vw);
+
+    }
+    .upload{
+        transform: translate(48vw,7.5vw);
+
+    }
+
+.stream{
+      
+    margin: 0 auto;
+    width: 80%;
+    transform: translate(-5vw,-12vw);
+ }
+   
+ .savebtn{
+    transform: translate(-5vw,10vw);
+ }
+.full{
+    top: 10;
+    left: 0;
+  
+    overflow-x: hidden;
+    overflow-y:scroll;
+    width: 100%;
+    height: 300vw;
+}
+
+}
