--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,7 +3,7 @@ body{
    
 }
 .footer-container {
-    background: #EAF6F6;
+    background: #252525;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -149,7 +149,7 @@ body{
       align-items: center;
       justify-content: center;
       transform: translateX(16vw);
-      color: black;
+      color: white;
     }
     
   
